OpenJMLTest/test/gitbug688err/expected
Proving methods in DayTime
Starting proof of DayTime.DayTime(int,int,int) with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of DayTime.DayTime(int,int,int) with prover !!!! - no warnings
Starting proof of DayTime.hour() with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of DayTime.hour() with prover !!!! - no warnings
Starting proof of DayTime.minute() with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of DayTime.minute() with prover !!!! - no warnings
Starting proof of DayTime.second() with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of DayTime.second() with prover !!!! - no warnings
Starting proof of DayTime.secondCalulation(DayTime) with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of DayTime.secondCalulation(DayTime) with prover !!!! - no warnings
Starting proof of DayTime.diffSeconds(DayTime) with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of DayTime.diffSeconds(DayTime) with prover !!!! - no warnings
Completed proving methods in DayTime
test/gitbug688err/DayTime.java:47: error: No visible specifications for this call site: DayTime.secondCalulation(DayTime) called from DayTimeMain.main(java.lang.String[])
    //@ old int diff = secondCalulation(this) - secondCalulation(stop); // A public spec cannot see private methods/specs
                                       ^
test/gitbug688err/DayTime.java:47: error: No visible specifications for this call site: DayTime.secondCalulation(DayTime) called from DayTimeMain.main(java.lang.String[])
    //@ old int diff = secondCalulation(this) - secondCalulation(stop); // A public spec cannot see private methods/specs
                                                                ^
Operation not performed because of parse or type errors
2 errors
